<resources>
    <string name="app_name">Pole User</string>


    <!--Links-->
    <string name="LinkAddUser">http://amlakeyekta.ir/pol/User/newUser.php</string>
    <string name="LinkLoginUser">http://amlakeyekta.ir/pol/User/selectUser.php</string>
    <string name="LinkGetPass">http://amlakeyekta.ir/pol/User/sms/getPassSmS.php</string>
    <string name="LinkGetSubSubject">http://amlakeyekta.ir/pol/User/getSubSubject.php</string>
    <string name="LinkRequestUser">http://amlakeyekta.ir/pol/Req/requestUser.php</string>
    <string name="LinkSendSms">http://amlakeyekta.ir/pol/User/sms/SendCod.php</string>
    <string name="LinkAcceptOne">http://amlakeyekta.ir/pol/Req/requestWaitForAccUser.php</string>
    <string name="LinkWaiteForPrice">http://amlakeyekta.ir/pol/Req/requestWaitForPrice.php</string>
    <string name="LinkPayMoney">http://amlakeyekta.ir/pol/Req/requestPayMoney.php</string>
    <string name="LinkEditPro">http://amlakeyekta.ir/pol/User/editPro.php</string>
    <string name="LinkShowAllFinishedWork">http://amlakeyekta.ir/pol/User/showAllFinishedWork.php</string>
    <string name="LinkTicket">http://amlakeyekta.ir/pol/User/sendticket.php</string>
    <string name="LinkSelectTicket">http://amlakeyekta.ir/pol/User/selectticket.php</string>


    <!--login Activity-->
    <string name="edtPhoneNumber">شماره تلفن (بدون صفر)</string>
    <string name="edtPassword">رمز عبور</string>
    <string name="btnLogin">ورود</string>
    <string name="btnRegister">ثبت نام</string>
    <string name="txtForgetPass">آیا رمز خود را فراموش کرده اید؟</string>


    <!--btnRegister PhoneNum-->
    <string name="btnSendCode">ارسال کد</string>
    <string name="btnBack">بازگشت</string>


    <!--Register ==> code-->
    <string name="edtGetCode">محل درج کد دریافتی</string>
    <string name="txtTimer">زمان 2:00</string>
    <string name="btnCheckCode">بررسی کد</string>
    <string name="btnWrongPhoneNum">شماره اشتباه؟</string>


    <!--Register ==> Register Finish-->
    <string name="edtFirstName">نام</string>
    <string name="edtLastName">نام خانوادگی</string>
    <string name="edtRePassword">تکرار رمز عبور</string>
    <string name="edtPostalCode">کد پستی</string>
    <string name="edtAddress">آدرس</string>
    <string name="btnFinishRegister">تکمیل ثبت نام</string>
    <string name="btnFinish">انصراف و بستن</string>


    <!--Register ==> ReGet Code-->
    <string name="txtYourPass">رمز شما</string>
    <string name="btnGetPass">دریافت رمز</string>


    <!--timer-->
    <string name="min">دقیقه</string>
    <string name="sec">ثانیه</string>
    <string name="finishTimer">زمان شما به پایان رسید لطفا دوباره تلاش کنید!</string>


    <!--Submit Req-->
    <string name="txtReqSubReq">خدمات درخواستی:</string>
    <string name="txtExplainSubReq">توضیح:</string>
    <string name="edtExplainSubReq">توضیح خودتان را در این قسمت وارد کنید.</string>
    <string name="txtAddressSubReq">آدرس:</string>
    <string name="edtAddressSubReq">آدرس خود را این در این قسمت وارد کنید</string>
    <string name="txtPeriodTimeSubReq">بازه ی زمانی</string>
    <string name="radiobtnPeriodTime1SubReq">از ساعت 8 الی 12</string>
    <string name="radiobtnPeriodTime2SubReq">از ساعت 12 الی 17</string>
    <string name="radiobtnPeriodTime3SubReq">از ساعت 17 الی 20</string>
    <string name="btnSubmitReqSubReq">ارسال درخواست</string>


    <!--Acc_One & Wait for money-->
    <string name="txtShowNoAcc_One">شما هیچ کار تایید شده ای ندارید!</string>
    <string name="txtShowNoWaitMoney">شما هیچ صورت حسابی برای پرداخت ندارید!</string>


    <!--Toast-->
    <string name="ToastFillAllBlanks">لطفا تمام فیلد های مورد نظر را پر کنید</string>
    <string name="ToastRePassword">رمز عبور ها باهم تطابق ندارند!</string>
    <string name="ToastPassword8">طول پسورد باید 8 کارکتر باشد</string>
    <string name="ToastCodPost">طول کد پستی باید 10 رقمی باشد</string>
    <string name="ToastChangeSave">تغییر ایجاد شد</string>
    <string name="ToastChangeNotSave">بامشکل روبه رو شد</string>

    <string name="ToastWelcome">خوش اومدی!</string>
    <string name="ToastWrongPassOrPhone">شماره تلفن یا پسورد شما اشتباه می باشد!</string>
    <string name="ToastWrongPhoneNum">لطفا شماره تلفن خود را وارد کنید!</string>
    <string name="ToastUsedPhone">شماره قبلا استفاده شده!</string>
    <string name="ToastWrongCode">کد غلط می باشد!</string>
    <string name="ToastTooManyTry">بیش از اندازه امتحان کردید!</string>
    <string name="ToastdoneRegister">ثبت نام شما با موفقیت انجام شد</string>
    <string name="ToastdoneNotRegister">موفق نشدید!</string>
    <string name="ToastNoPhone">شماره وارد شده موجود نمی باشد!</string>
    <string name="ToastNothingToShow">"چیزی ارائه نشده"</string>

    <string name="ToastChoseDate">تاریخ رو انتخاب کن</string>
    <string name="ToastNotThisTime">این ساعت رو نمیتونی</string>
    <string name="ToastTimeIsNotRight">زمان رو درست کن</string>

    <string name="Toast">متن</string>

    <string name="btnClose">انصراف</string>
    <string name="btnSaveEdit">ثبت اعمال تغییرات</string>

    <string name="itmEditProfile">ویرایش پروفایل</string>
    <string name="itmShowAllFinished">درخواست های تمام شده</string>
    <string name="FAQ">قوانین و مقررات</string>
    <string name="itmAboutUs">درباره ما</string>
    <string name="itmTellUs">ارسال تیکت</string>
    <string name="itmInvite">دعوت به همکاری</string>
    <string name="itmLogOff">خروج از حساب کاربری</string>

    <string name="ToastCheckNetTitle">مشکل اینترنت!</string>
    <string name="ToastCheckNetMessage">لطفا اتصال خود به اینترنت را چک کنید</string>

    <string name="ToastReqSend">درخواست شما ثبت گردید</string>
    <string name="ToastReqNotSend">با مشکل رو به رو شد!</string>
    <string name="ToastTicketSend">تیکت شما با موفقیت ارسال شد</string>
    <string name="ToastTicketNotSend">تیکت شما ارسا نشد!</string>


    <!-- Answer Ticket-->
    <string name="AnswerNotTicket">به تیکت شما پاسخ داده نشده</string>
    <string name="AnswerTicket">به تیکت شما پاسخ داده شده</string>

    <string name="alertTitleLogOff">خروج!</string>
    <string name="alertMessageLogOff">آیا میخواهید از حساب خود خارج شوید؟</string>


</resources>
