<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itmEditProfile"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/itmEditProfile" />

    <item
        android:id="@+id/itmShowAllFinished"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/itmShowAllFinished" />

    <item
        android:id="@+id/FAQ"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/FAQ" />

    <item
        android:id="@+id/itmAboutUs"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/itmAboutUs" />

    <item
        android:id="@+id/itmTellUs"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/itmTellUs" />

    <item
        android:id="@+id/itmInvite"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/itmInvite" />

    <item
        android:id="@+id/itmLogOff"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/itmLogOff" />

</menu>