<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Activity_Login_PolUser">


    <!--login-->
    <LinearLayout
        android:id="@+id/LinearLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edtPhoneNumLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:hint="@string/edtPhoneNumber" />

        <EditText
            android:id="@+id/edtPassLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edtPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnRegisterLogin"
                android:text="@string/btnRegister" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnLoginOnClick"
                android:text="@string/btnLogin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:onClick="txtForgetPass"
                android:text="@string/txtForgetPass"
                android:textColor="@color/ForgetPassColor" />

        </LinearLayout>

    </LinearLayout>

    <!--register ==> PhoneNumber-->
    <LinearLayout
        android:id="@+id/LinearRegPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edtPhoneNumRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edtPhoneNumber"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnBackOnClickRegister"
                android:text="@string/btnBack" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnSendCode"
                android:text="@string/btnSendCode" />

        </LinearLayout>

    </LinearLayout>

    <!--register ==> Check Code-->
    <LinearLayout
        android:id="@+id/LinearRegCheckCode"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edtPhoneNumber" />

        <TextView
            android:id="@+id/txtShowCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <EditText
            android:id="@+id/edtGetCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/edtGetCode" />


        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/txtTimer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnBackOnClickWrongNum"
                android:text="@string/btnWrongPhoneNum" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnCheckCode"
                android:text="@string/btnCheckCode" />

        </LinearLayout>


    </LinearLayout>

    <!--register ==> Finish Register-->
    <LinearLayout
        android:id="@+id/LinearRegFinish"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edtFirstName" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edtLastName" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edtPhoneNumber" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edtPassword" />

        <EditText
            android:id="@+id/edtRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edtRePassword" />

        <EditText
            android:id="@+id/edtPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:hint="@string/edtPostalCode" />

        <Spinner
            android:id="@+id/spnState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spnCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/edtAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnBackOnClickFinish"
                android:text="@string/btnFinish" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnFinishRegister"
                android:text="@string/btnFinishRegister" />

        </LinearLayout>

    </LinearLayout>

    <!--register ==> Forget Password-->
    <LinearLayout
        android:id="@+id/LinearRegForgetPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edtPhoneNumberForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="phone"
            android:hint="@string/edtPhoneNumber" />

        <TextView
            android:id="@+id/txtYourPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/txtYourPass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnBackOnClickForgetPass"
                android:text="@string/btnBack" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="btnGetPass"
                android:text="@string/btnGetPass" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>